--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "iconv-lite": "^0.7.0",
     "jsdom": "^27.1.0",
     "lucide-react": "^0.561.0",
-    "next": "15.5.4",
+    "next": "^15.5.9",
     "node-7z": "^3.0.0",
     "node-fetch": "^2.7.0",
     "playwright": "^1.56.0",
@@ -49,8 +49,8 @@
     "plyr-react": "^5.3.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.2",
+    "react-dom": "^19.1.2",
     "react-native-vector-icons": "^10.3.0",
     "rebrowser-patches": "^1.0.19",
     "rebrowser-playwright": "^1.52.0",
